@@ -23,6 +23,7 @@ Changelog
  * Fix: Specific page permission checks are now enforced when viewing a page revision (Andy Chosak)
  * Fix: `pageurl` and `slugurl` tags no longer fail when `request.site` is `None` (Samir Shah)
  * Fix: Output form media on add/edit image forms with custom models (Matt Westcott)
+ * Fix: Layout for the clear checkbox in default FileField widget (Mikalai Radchuk)
 
 
 2.6.1 (05.08.2019)
